--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
     - repo: https://github.com/pre-commit/pre-commit-hooks
-      rev: v3.3.0
+      rev: v3.4.0
       hooks:
           - id: check-added-large-files
           - id: check-json
@@ -13,15 +13,17 @@ repos:
           - id: trailing-whitespace
           - id: mixed-line-ending
     - repo: https://github.com/igorshubovych/markdownlint-cli
-      rev: v0.24.0
+      rev: v0.26.0
       hooks:
           - id: markdownlint
-    - repo: https://github.com/prettier/pre-commit
-      rev: main
+    - repo: https://github.com/pre-commit/mirrors-prettier
+      rev: v2.2.1
       hooks:
           - id: prettier
             args:
                 - --config-precedence=file-override
+            additional_dependencies:
+                - prettier@2.2.1
     - repo: meta
       hooks:
           - id: check-hooks-apply
