--- a/.github/workflows/lint-latex-document.yml
+++ b/.github/workflows/lint-latex-document.yml
@@ -13,8 +13,8 @@ jobs:
             - uses: actions/checkout@v2
             - uses: ChiefGokhlayeh/textidote-action@main
               with:
-                  root_file: main.tex
+                  root_file: report.tex
             - uses: actions/upload-artifact@v2
               with:
                   name: textidote_report
-                  path: report.html
+                  path: report_textidote.html
