--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,13 +5,15 @@ repos:
       rev: v3.4.0
       hooks:
           - id: check-added-large-files
+            args: ['--maxkb=1000']
+          - id: check-executables-have-shebangs
           - id: check-json
           - id: check-merge-conflict
           - id: check-yaml
           - id: detect-private-key
           - id: end-of-file-fixer
-          - id: trailing-whitespace
           - id: mixed-line-ending
+          - id: trailing-whitespace
     - repo: https://github.com/igorshubovych/markdownlint-cli
       rev: v0.26.0
       hooks:
@@ -24,6 +26,11 @@ repos:
                 - --config-precedence=file-override
             additional_dependencies:
                 - prettier@2.2.1
+                - prettier-plugin-sh@v0.6.0
+    - repo: https://github.com/shellcheck-py/shellcheck-py
+      rev: v0.7.1.1
+      hooks:
+          - id: shellcheck
     - repo: meta
       hooks:
           - id: check-hooks-apply
