--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,6 +31,10 @@ repos:
       rev: v0.7.1.1
       hooks:
           - id: shellcheck
+    - repo: https://github.com/Lucas-C/pre-commit-hooks-nodejs
+      rev: v1.1.1
+      hooks:
+          - id: dockerfile_lint
     - repo: meta
       hooks:
           - id: check-hooks-apply
